# exam_api/api/docs/swagger.json
@@ -1,11 +1,90 @@
 {
     "swagger": "2.0",
     "info": {
+        "description": "ishlaaaaaaaaaaaaaaaaaaaaaaaaaaa",
         "contact": {}
     },
     "paths": {
+        "/token": {
+            "get": {
+                "description": "This API generates new access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Get Accsess token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Refresh Token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "object"
+                    }
+                }
+            }
+        },
+        "/v1/admin/login/{name}/{password}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Login admin",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "Login admin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "admin name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "admin password",
+                        "name": "password",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/custumer.GetAdminRes"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/custumer/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api create store",
                 "consumes": [
                     "application/json"
@@ -40,6 +119,11 @@
         },
         "/v1/custumer/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api delet custumer with posts by id",
                 "consumes": [
                     "application/json"
@@ -72,6 +156,11 @@
         },
         "/v1/custumer/get/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api get custumer with posts by id",
                 "consumes": [
                     "application/json"
@@ -104,6 +193,11 @@
         },
         "/v1/custumer/getList": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api get custumers",
                 "consumes": [
                     "application/json"
@@ -127,6 +221,11 @@
         },
         "/v1/custumer/update": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api update custumer",
                 "consumes": [
                     "application/json"
@@ -159,8 +258,57 @@
                 }
             }
         },
+        "/v1/moder/login/{name}/{password}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Login moder",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "Login moder",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Moderator name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Moderator password",
+                        "name": "password",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/custumer.GetAdminRes"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/post/allInfo/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api get Post by id",
                 "consumes": [
                     "application/json"
@@ -190,6 +338,11 @@
         },
         "/v1/post/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api create post",
                 "consumes": [
                     "application/json"
@@ -224,6 +377,11 @@
         },
         "/v1/post/delet/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api posts by id",
                 "consumes": [
                     "application/json"
@@ -256,6 +414,11 @@
         },
         "/v1/post/get/reatings/avarage/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api get posts reating by id",
                 "consumes": [
                     "application/json"
@@ -288,6 +451,11 @@
         },
         "/v1/post/get/reatings/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api get posts reating by id",
                 "consumes": [
                     "application/json"
@@ -320,6 +488,11 @@
         },
         "/v1/post/get/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api get post by id",
                 "consumes": [
                     "application/json"
@@ -352,6 +525,11 @@
         },
         "/v1/post/update": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api update Post",
                 "consumes": [
                     "application/json"
@@ -386,6 +564,11 @@
         },
         "/v1/reating/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api create reating",
                 "consumes": [
                     "application/json"
@@ -420,6 +603,11 @@
         },
         "/v1/reating/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api delet reating by id",
                 "consumes": [
                     "application/json"
@@ -452,6 +640,11 @@
         },
         "/v1/reating/get/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api get reating by id",
                 "consumes": [
                     "application/json"
@@ -484,6 +677,11 @@
         },
         "/v1/reating/update": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "this api update reating",
                 "consumes": [
                     "application/json"
@@ -511,6 +709,89 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/reating.ReatingInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/register": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Registers Custumer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Custumer"
+                ],
+                "summary": "Register Custumer",
+                "parameters": [
+                    {
+                        "description": "Custumer",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/custumer.CustumerForCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/custumer.CustumerInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/verify/{email}/{code}": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Verifys custumer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Custumer"
+                ],
+                "summary": "Verify custumer",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "code",
+                        "name": "code",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/custumer.CustumerInfo"
                         }
                     }
                 }
@@ -566,16 +847,28 @@
                 "bio": {
                     "type": "string"
                 },
+                "code": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "first_name": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "last_name": {
                     "type": "string"
                 },
+                "password": {
+                    "type": "string"
+                },
                 "phoneNumber": {
+                    "type": "string"
+                },
+                "refresh_token": {
                     "type": "string"
                 }
             }
@@ -592,6 +885,9 @@
                         "$ref": "#/definitions/custumer.CustumAddress"
                     }
                 },
+                "code": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -604,13 +900,42 @@
                 "last_name": {
                     "type": "string"
                 },
+                "password": {
+                    "type": "string"
+                },
                 "phoneNumber": {
+                    "type": "string"
+                },
+                "refresh_token": {
                     "type": "string"
                 }
             }
         },
         "custumer.Empty": {
             "type": "object"
+        },
+        "custumer.GetAdminRes": {
+            "type": "object",
+            "properties": {
+                "AccesToken": {
+                    "type": "string"
+                },
+                "Name": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
         },
         "post.EmptyPost": {
             "type": "object"
@@ -716,6 +1041,13 @@
                     }
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
