# exam_api/api/handlers/models/user.go
@@ -6,6 +6,20 @@ import (
 	pr "examLast/exam_api/genproto/reating_proto"
 )
 
+type UpdateAccessToken struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type ResponseError struct {
+	Error interface{} `json:"error"`
+}
+
+type ServerError struct {
+	Status string `json:"status"`
+	Message string `json:"message"`
+}
+
 
 type CustumerAllInfo struct {
 	Custumer pc.CustumerInfo
@@ -37,4 +51,3 @@ type Error struct {
 	Error       error
 	Description string
 }
-
